--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-#cat-container {
-  display: inline-block;
-}
 .list-container {
   float: left;
   width: 20%;
@@ -8,10 +5,10 @@
 }
 .display-container {
   float: right;
-  width: 60%;
+  width: 75%;
   display: inline-block;
 }
 img {
-  width: 200px;
-  height: 200px;
+  max-width: 100%;
+  max-height: 100%;
 }
